--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / Intel Core i5-10300H (2.5 - 4.5 ГГц) / RAM 16 ГБ / SSD 512 ГБ / nVidia GeForce GTX 1650 Ti, 4 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / без ОС / 2.15 кг / черный
                     </p>
                 </div>
-                <div class="price">
-                    <span>Цена: 24 999 грн</span>
-                </div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
@@ -42,16 +42,18 @@
                         Экран 15.6" (1920x1080) Full HD, матовый / AMD Athlon Gold 3150U (2.4 - 3.3 ГГц) / RAM 4 ГБ / SSD 128 ГБ / AMD Radeon Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / DOS / 1.85 кг / серый
                     </p>
                 </div>
-                <div class="price"><span>Цена: 10 999 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
                 <div class="images">
                     <img src="Images/asus.jpeg" alt="Asus">
                 </div>
-                <div  class="title">
+                <div class="title">
                     <span>
                         Ноутбук Asus TUF Gaming F15 FX506LH-HN110 (90NR03U1-M07860) Fortress Gray
                     </span>
@@ -61,16 +63,18 @@
                         Экран 15.6" IPS (1920x1080) Full HD 144 Гц, матовый / Intel Core i5-10300H (2.5 - 4.5 ГГц) / RAM 8 ГБ / SSD 512 ГБ / nVidia GeForce GTX 1650, 4 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / без ОС / 2.3 кг / серый
                     </p>
                 </div>
-                <div class="price"><span>Цена: 23 999 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
                 <div class="images">
                     <img src="Images/hp.jpeg" alt="HP">
                 </div>
-                <div  class="title">
+                <div class="title">
                     <span>Ноутбук HP Laptop 15s-eq1002ua (1U9R7EA) Silver</span>
                 </div>
                 <div class="description">
@@ -78,16 +82,18 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / AMD Ryzen 7 4700U (2.0 - 4.1 ГГц) / RAM 16 ГБ / SSD 512 ГБ / AMD Radeon Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / FreeDOS / 1.69 кг / серебристый
                     </p>
                 </div>
-                <div class="price"><span>Цена: 18 999 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
                 <div class="images">
                     <img src="Images/dell.jpeg" alt="dell">
                 </div>
-                <div  class="title">
+                <div class="title">
                     <span>
                         Ноутбук Dell Vostro 15 3500 (N3001VN3500UA03_2201_UBU) Black
                     </span>
@@ -97,35 +103,39 @@
                         Экран 15.6" WVA (1920x1080) Full HD, глянцевый с антибликовым покрытием / Intel Core i3-1115G4 (3.9 - 4.1 ГГц) / RAM 8 ГБ / SSD 256 ГБ / Intel UHD / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / Ubuntu / 1.78 кг / черный
                     </p>
                 </div>
-                <div class="price"><span>Цена: 14 599 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
-            <div class="images">
-                <img src="Images/honor.jpeg" alt="honor">
-            </div>
-            <div  class="title">
-                <span>
-                    Ноутбук Honor MagicBook X 15 (BBR-WAI9A) Space Grey
-                </span>
-            </div>
-            <div class="description">
-                <p>
-                    Экран 15.6" IPS (1920х1080) Full HD, глянцевый с антибликовым покрытием / Intel Core i3-10110U (2.1 - 4.1 ГГц) / RAM 8 ГБ / SSD 256 ГБ / Intel UHD Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / Windows 10 Home 64bit / 1.56 кг / серый
-                </p>
-            </div>
-            <div class="price"><span>Цена: 16 499 грн</span></div>
-            <div class="add-to-bin">
-                <a href="#">В корзину</a>
-            </div>
+                <div class="images">
+                    <img src="Images/honor.jpeg" alt="honor">
+                </div>
+                <div class="title">
+                    <span>
+                        Ноутбук Honor MagicBook X 15 (BBR-WAI9A) Space Grey
+                    </span>
+                </div>
+                <div class="description">
+                    <p>
+                        Экран 15.6" IPS (1920х1080) Full HD, глянцевый с антибликовым покрытием / Intel Core i3-10110U (2.1 - 4.1 ГГц) / RAM 8 ГБ / SSD 256 ГБ / Intel UHD Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / Windows 10 Home 64bit / 1.56 кг / серый
+                    </p>
+                </div>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
+                </div>
             </li><!--
          --><li>
                 <div class="images">
                     <img src="Images/msi.jpeg" alt="msi">
                 </div>
-                <div  class="title">
+                <div class="title">
                     <span>
                         Ноутбук MSI Bravo 15 (A4DCR-092XUA) Graphite Black
                     </span>
@@ -135,16 +145,18 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / AMD Ryzen 5 4600H (3.0 - 4.0 ГГц) / RAM 8 ГБ / SSD 512 ГБ / AMD Radeon RX 5300M, 3 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / DOS / 1.96 кг / черный
                     </p>
                 </div>
-                <div class="price"><span>Цена: 21 999 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
             </li><!--
          --><li>
                 <div class="images">
                     <img src="Images/huawei.jpeg" alt="huawei">
                 </div>
-                <div  class="title">
+                <div class="title">
                     <span>
                         Ноутбук Huawei MateBook X Pro (53010VUK) Space Gray
                     </span>
@@ -154,11 +166,13 @@
                         Экран 13.9" LTPS (3000х2000) Multitouch, глянцевый с антибликовым покрытием / Intel Core i7-10510U (1.8 - 4.9 ГГц) / RAM 16 ГБ / SSD 1 ТБ / nVidia GeForce MX250, 2 ГБ / без ОД / Wi-Fi / Bluetooth / веб-камера / Windows 10 Home 64bit / 1.33 кг / серый
                     </p>
                 </div>
-                <div class="price"><span>Цена: 42 999 грн</span></div>
-                <div class="add-to-bin">
-                    <a href="#">В корзину</a>
+                <div>
+                    <span class="price">Цена: 24 999 грн</span>
+                    <span class="add-to-bin">
+                        <a href="#">В корзину</a>
+                    </span>
                 </div>
-            </li><!--
+            </li>
         </ul>
     </div>
 </body>
