--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / Intel Core i5-10300H (2.5 - 4.5 ГГц) / RAM 16 ГБ / SSD 512 ГБ / nVidia GeForce GTX 1650 Ti, 4 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / без ОС / 2.15 кг / черный
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -42,7 +42,7 @@
                         Экран 15.6" (1920x1080) Full HD, матовый / AMD Athlon Gold 3150U (2.4 - 3.3 ГГц) / RAM 4 ГБ / SSD 128 ГБ / AMD Radeon Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / DOS / 1.85 кг / серый
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -63,7 +63,7 @@
                         Экран 15.6" IPS (1920x1080) Full HD 144 Гц, матовый / Intel Core i5-10300H (2.5 - 4.5 ГГц) / RAM 8 ГБ / SSD 512 ГБ / nVidia GeForce GTX 1650, 4 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / без ОС / 2.3 кг / серый
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -82,7 +82,7 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / AMD Ryzen 7 4700U (2.0 - 4.1 ГГц) / RAM 16 ГБ / SSD 512 ГБ / AMD Radeon Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / FreeDOS / 1.69 кг / серебристый
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -103,7 +103,7 @@
                         Экран 15.6" WVA (1920x1080) Full HD, глянцевый с антибликовым покрытием / Intel Core i3-1115G4 (3.9 - 4.1 ГГц) / RAM 8 ГБ / SSD 256 ГБ / Intel UHD / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / Ubuntu / 1.78 кг / черный
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -124,7 +124,7 @@
                         Экран 15.6" IPS (1920х1080) Full HD, глянцевый с антибликовым покрытием / Intel Core i3-10110U (2.1 - 4.1 ГГц) / RAM 8 ГБ / SSD 256 ГБ / Intel UHD Graphics / без ОД / Wi-Fi / Bluetooth / веб-камера / Windows 10 Home 64bit / 1.56 кг / серый
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -145,7 +145,7 @@
                         Экран 15.6" IPS (1920x1080) Full HD, матовый / AMD Ryzen 5 4600H (3.0 - 4.0 ГГц) / RAM 8 ГБ / SSD 512 ГБ / AMD Radeon RX 5300M, 3 ГБ / без ОД / LAN / Wi-Fi / Bluetooth / веб-камера / DOS / 1.96 кг / черный
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
@@ -166,7 +166,7 @@
                         Экран 13.9" LTPS (3000х2000) Multitouch, глянцевый с антибликовым покрытием / Intel Core i7-10510U (1.8 - 4.9 ГГц) / RAM 16 ГБ / SSD 1 ТБ / nVidia GeForce MX250, 2 ГБ / без ОД / Wi-Fi / Bluetooth / веб-камера / Windows 10 Home 64bit / 1.33 кг / серый
                     </p>
                 </div>
-                <div>
+                <div class="buy">
                     <span class="price">Цена: 24 999 грн</span>
                     <span class="add-to-bin">
                         <a href="#">В корзину</a>
